testing/tests/ui/filter-recursion.stderr
error: the previous template error derives from
 --> tests/ui/filter-recursion.rs:4:19
  |
4 | #[template(path = "filter-recursion.html")]
  |                   ^^^^^^^^^^^^^^^^^^^^^^^
